# gawk

./: .gitignore  ChangeLog  Makefile.in  aclocal.m4  awk.h  builtin.c  configh.in  configure  configure.ac  custom.h  floatmagic.h  main.c  protos.h  re.c  replace.c
awklib/: Makefile.in
doc/: Makefile.in
extension/: Makefile.in  aclocal.m4  configh.in  configure  configure.ac
extras/: Makefile.in
helpers/: update-support.sh
m4/: gnulib-common.m4  pma.m4
pc/: Makefile.tst
support/: ChangeLog  Makefile.am  Makefile.in  xalloc-die.c
test/: Makefile.am  Makefile.in  Maketests
